# Soup

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  plan.md  pyproject.toml
.claude/: CLAUDE.md
.github/: FUNDING.yml
examples/: README.md
examples/configs/: dpo_example.yaml
examples/data/: dpo_sample.jsonl
soup_cli/: __init__.py  __main__.py  cli.py
soup_cli/cans/: __init__.py  pack.py  schema.py  unpack.py  verify.py
soup_cli/commands/: can.py  chat.py  cost.py  data.py  deploy.py  diff.py  doctor.py  eval.py  export.py  generate.py  infer.py  init.py  migrate.py  push.py  quickstart.py  runs.py  serve.py  sweep.py  train.py  ui.py
soup_cli/config/: loader.py  schema.py
soup_cli/data/: formats.py
soup_cli/eval/: __init__.py  custom.py  gate.py  human.py  judge.py  leaderboard.py  quant_check.py
soup_cli/experiment/: tracker.py
soup_cli/monitoring/: callback.py  display.py  hf_push.py
soup_cli/registry/: store.py
soup_cli/trainer/: dpo.py  embedding.py  grpo.py  ipo.py  kto.py  orpo.py  ppo.py  pretrain.py  reward_model.py  rewards.py  sft.py  simpo.py
soup_cli/ui/: app.py
soup_cli/utils/: auto_quant.py  errors.py  flash_attn.py  fp8.py  fsdp.py  gpu.py  hf.py  kernel_picker.py  liger.py  long_context.py  ollama.py  paths.py  qat.py  quality.py  ring_attention.py  sglang.py  structured_output.py  unsloth.py  v028_features.py  (+1 more)
tests/: test_bugfixes.py  test_callback.py  test_cans.py  test_chat.py  test_cli.py  test_cli_subprocess.py  test_cost.py  test_deepspeed.py  test_deploy_ollama.py  test_display.py  test_doctor.py  test_dpo_example.py  test_errors.py  test_eval.py  test_eval_gate.py  test_eval_platform.py  test_formats.py  test_fp8_recipe.py  test_grpo.py  test_hf_integration.py  test_inference_advanced.py  test_init.py  test_loader.py  test_moe.py  test_part_c.py  test_part_d.py  test_part_f_hardening.py  test_performance.py  test_ppo.py  test_pretrain.py  test_push.py  test_qat.py  test_quality_filter.py  test_quant_check.py  test_quickstart.py  test_resume.py  test_sglang_serve.py  test_synth_data_pro.py  test_tensorboard.py  test_trace_to_pref.py  (+10 more)
(+10 files in other folders)
